# nba-data

./: .gitignore  .pre-commit-config.yaml  README.md  package.json  pyproject.toml
notebooks/: exploratory-analysis.ipynb  natstat-api.ipynb
scripts/: call_natstat_api.py
